--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">KotlinDemo</string>
-    <string name="random_heading">Random value betweeen 1 and %1d</string>
+    <string name="random_heading">Random value betweeen 1 and R</string>
 </resources>
